# fluxr

./: .gitignore  Cargo.toml
src/: cursive_formatter.rs  executable_command.rs  layout.rs  main.rs  runner.rs  tasks.rs  terminal_control.rs  ui_context.rs  vt100_string.rs
src/crossterm_backend/: input.rs  mod.rs
src/widgets/: linear_layout.rs  mod.rs  text_view.rs  text_widget.rs
