[package]
name = "fluxr"
version = "0.1.0"
authors = ["Lucas Taylor <lucas@perfectlunacy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
cursive = "0.14.0"
cursive-multiplex = "^0.2.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }